--- a/.github/workflows/call-main.yml
+++ b/.github/workflows/call-main.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - master
   schedule:
-    - cron: "0 0 */1 * *"
+    - cron: "*/25 * * * *"
 jobs:
   build:
     runs-on: ubuntu-16.04
