--- a/.github/workflows/call-main.yml
+++ b/.github/workflows/call-main.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - master
   schedule:
-    - cron: "*/28 * * * *"
+    - cron: "20,40,58 22-14 * * *"
 jobs:
   build:
     runs-on: ubuntu-16.04
