--- a/.github/workflows/call-main.yml
+++ b/.github/workflows/call-main.yml
@@ -3,8 +3,8 @@ on:
   push:
     branches:
       - master
-  schedule:
-    - cron: "20,40,58 0-14,22-23 * * *"
+#  schedule:
+#    - cron: "20,40,58 0-14,22-23 * * *"
 jobs:
   build:
     runs-on: ubuntu-16.04
